# phase4_global_commodity

./: .env  .gitignore  ATHENA_SCHEMA.sql  Dockerfile  Dockerfile.airflow  Dockerfile.superset  E2E_TESTING_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  TESTING.md  docker-compose.yaml  init-superset.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-superset.txt  requirements.txt  run_tests.sh  setup_connections.py  validate_e2e.py
commodity_dbt/: dbt_project.yml
commodity_dbt/.dbt/: .user.yml  profiles.yml
commodity_dbt/models/marts/: fact_commodity_performance.sql
commodity_dbt/models/staging/: sources.yml  stg_currency_rates.sql  stg_fred_data.sql  stg_metal_prices.sql  stg_news_data.sql
config/: airflow.cfg
dags/: __init__.py  config.yaml  dags.py  exceptions.py  global_commodity_dag.py  migrate_s3_path.py  models.py  setup_connections.py  utils.py
dags/samples/: currency_rates.json  fred_data.json  news_data.json
global_commodity_dbt/: .user.yml  dbt_project.yml  profiles.yml
global_commodity_dbt/models/: _sources.yml
global_commodity_dbt/models/dim/: dim_commodity.sql  dim_currency.sql  dim_macro_series.sql
global_commodity_dbt/models/fact/: fact_commodity_news.sql  fact_commodity_prices.sql  fact_currency_exchange_rates.sql  fact_macro_observations.sql
global_commodity_dbt/models/mart/: mart_global_commodity_market.sql
global_commodity_dbt/models/staging/: staging.yml  stg_commodity_prices.sql  stg_currency_exchange_rates.sql  stg_fred_macro_observations.sql
terraform-aws/: main.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: README.md  __init__.py  conftest.py  test_dag_structure.py  test_dags.py  test_exceptions.py  test_models.py  test_task_dbt_run.py  test_task_dbt_test.py  test_task_extract_val_load_gcs.py  test_task_gcs_to_bq.py  test_task_get_all_keys.py  test_utility_and_task.py  test_utils.py
tf-build/: main.tf  outputs.tf  variables.tf
